# Project-RAG

./: .gitignore  PROJECT_JOURNEY.md  README.md  cluster_clients.py  docker-compose.dev.yml  docker-compose.distributed.yml  docker-compose.yml  embed.py  embed_distributed.py  hybrid_retriever.py  main.py  pyproject.toml  qdrant_sharding.py  query_enhancer.py  queue_service.py  reranker.py
config/: mongo-replica-init.sh  prometheus-distributed.yml  prometheus.yml  rabbitmq-cluster.sh  redis-cluster-init.sh
config/grafana/dashboards/: rag-cluster-dashboard.json  rag-system-dashboard.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: datasources.yml
scripts/: health_check.sh  start_cluster.sh  start_distributed.sh  start_single.sh  stop_all.sh  stop_cluster.sh
src/api/: main.py
src/core/: __init__.py  config.py  engine_factory.py  rag_engine.py  rag_engine_distributed.py
src/ui/static/css/: styles.css
src/ui/static/js/: app.js
src/ui/templates/: index.html  monitor.html
